// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders correctly PollList should render as expected 1`] = `
<body>
  <div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover table-bordered align-middle caption-top"
      >
        <caption>
          List of users
        </caption>
        <thead
          class="table-light"
        >
          <tr>
            <th
              scope="col"
            >
              #
            </th>
            <th
              scope="col"
            >
              User
            </th>
            <th
              scope="col"
            >
              Answered
            </th>
            <th
              scope="col"
            >
              Asked
            </th>
          </tr>
        </thead>
        <tbody />
      </table>
    </div>
  </div>
</body>
`;

exports[`Renders correctly PollList should render as expected 2`] = `
<body>
  <div>
    <div
      class="table-responsive"
    >
      <table
        class="table table-hover table-bordered align-middle caption-top"
      >
        <caption>
          List of users
        </caption>
        <thead
          class="table-light"
        >
          <tr>
            <th
              scope="col"
            >
              #
            </th>
            <th
              scope="col"
            >
              User
            </th>
            <th
              scope="col"
            >
              Answered
            </th>
            <th
              scope="col"
            >
              Asked
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <th
              scope="row"
            >
              1
            </th>
            <td>
              <div
                class="d-flex align-items-center gap-2"
              >
                <img
                  alt="avatar-thuandmt"
                  src="/images/avatar/7.png"
                />
                <div
                  class="d-flex flex-column"
                >
                  <h6
                    class="mb-0"
                  >
                    Thuan Dao
                  </h6>
                  <span
                    class="text-secondary fs-7"
                  >
                    thuandmt
                  </span>
                </div>
              </div>
            </td>
            <td>
              6
            </td>
            <td>
              0
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              2
            </th>
            <td>
              <div
                class="d-flex align-items-center gap-2"
              >
                <img
                  alt="avatar-sarahedo"
                  src="/images/avatar/1.png"
                />
                <div
                  class="d-flex flex-column"
                >
                  <h6
                    class="mb-0"
                  >
                    Sarah Edo
                  </h6>
                  <span
                    class="text-secondary fs-7"
                  >
                    sarahedo
                  </span>
                </div>
              </div>
            </td>
            <td>
              4
            </td>
            <td>
              2
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              3
            </th>
            <td>
              <div
                class="d-flex align-items-center gap-2"
              >
                <img
                  alt="avatar-mtsamis"
                  src="/images/avatar/3.png"
                />
                <div
                  class="d-flex flex-column"
                >
                  <h6
                    class="mb-0"
                  >
                    Mike Tsamis
                  </h6>
                  <span
                    class="text-secondary fs-7"
                  >
                    mtsamis
                  </span>
                </div>
              </div>
            </td>
            <td>
              3
            </td>
            <td>
              2
            </td>
          </tr>
          <tr>
            <th
              scope="row"
            >
              4
            </th>
            <td>
              <div
                class="d-flex align-items-center gap-2"
              >
                <img
                  alt="avatar-tylermcginnis"
                  src="/images/avatar/2.png"
                />
                <div
                  class="d-flex flex-column"
                >
                  <h6
                    class="mb-0"
                  >
                    Tyler McGinnis
                  </h6>
                  <span
                    class="text-secondary fs-7"
                  >
                    tylermcginnis
                  </span>
                </div>
              </div>
            </td>
            <td>
              2
            </td>
            <td>
              2
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</body>
`;
